# base-app-fastapi-psycopg2-sqlalchemy-alembic

./: .env_example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 895aaf9cfc17_create_users_table.py
src/: server.py
src/apps/user/: controller.py  model.py  repository.py  schema.py  service.py
src/core/: database.py  schema.py  settings.py  urls.py
src/core/utils/: gpass.py  logger.py
tests/: test_conf.py  test_db_user.py  test_gpass.py  test_server.py
